[gd_scene load_steps=3 format=3 uid="uid://lh331jkwlfji"]

[ext_resource type="Script" path="res://scripts/HubManager.gd" id="1_ltuv0"]
[ext_resource type="Theme" uid="uid://bd1ksuf5j6cn8" path="res://resources/button_theme.tres" id="2_2fkt3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltuv0")

[node name="save" type="Button" parent="."]
layout_mode = 2
offset_right = 141.0
offset_bottom = 123.0
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 30
text = "save"

[node name="GridContainer" type="GridContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -182.0
offset_right = 384.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 100
theme_override_constants/v_separation = 25
columns = 4

[node name="1" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "1"

[node name="2" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "2"

[node name="3" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "3"

[node name="4" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "4"

[node name="5" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "5"

[node name="6" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "6"

[node name="7" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "7"

[node name="8" type="Button" parent="GridContainer"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 60
text = "8
"

[node name="options" type="VFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -123.0
offset_right = 261.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="drop down" type="OptionButton" parent="options"]
layout_mode = 2
theme = ExtResource("2_2fkt3")

[node name="new" type="Button" parent="options"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 30
text = "new
"

[node name="rename" type="Button" parent="options"]
layout_mode = 2
theme = ExtResource("2_2fkt3")
theme_override_font_sizes/font_size = 30
text = "rename"

[node name="info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -377.5
offset_right = 377.5
offset_bottom = 121.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 56
text = "Top Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="GridContainer/1" to="." method="_on_profile_button_button_up" binds= [0]]
[connection signal="item_selected" from="options/drop down" to="." method="_on_drop_down_item_selected"]
[connection signal="button_up" from="options/new" to="." method="_on_new_button_up"]
